Change in footer

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="author" content="webthemez">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Nature - Best Free Bootstrap Coming Soon template | webthemez</title>
+<title>Welcome to Imran Nazir Emon's blog</title>
 <link rel="stylesheet" href="css/bootstrap.min.css">
 <link rel="stylesheet" href="css/main.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -73,12 +73,12 @@
     <div class="row"> 
       <div class="col-md-10 col-md-offset-1">
         <ul class="footer-share">
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://www.facebook.com/emon.dmhs"><i class="fa fa-facebook"></i></a></li>
           <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
         </ul> 
-        <p> Copyright © 2018 <a href="https://webthemez.com/tag/free" target="_blank">Website Templates</a> by WebThemez.com.</p>
+        <p> Copyright © 2019 <a href="https://shadhinsoft.com" target="_blank">Shadhin Soft</a></p>
       </div>
     </div>
   </div> 
