Change in footer

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
 <meta charset="utf-8">
-<meta name="author" content="webthemez">
+<meta name="author" content="Imran Nazir Emon">
 <meta name="description" content="">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Welcome to Imran Nazir Emon's blog</title>
@@ -28,7 +28,7 @@
       <div class="container">
 	  <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <div class="banner-text text-center"> <a class="logo" href="#">Nature<b>#</b></a>
+          <div class="banner-text text-center"> <a class="logo" href="http://shadhinsoft.com">Hello there! :)<b>#</b></a>
             
 			<div class="type-wrap">
             <div id="typed-strings">
