Change in footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="container">
 	  <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <div class="banner-text text-center"> <a class="logo" href="http://shadhinsoft.com">Hello there! :)<b><\br> -Imran</b></a>
+          <div class="banner-text text-center"> <a class="logo" href="http://shadhinsoft.com">Hello there! :)<b> </b></a>
             
 			<div class="type-wrap">
             <div id="typed-strings">
