Change in footer

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="container">
 	  <div class="row">
         <div class="col-md-10 col-md-offset-1">
-          <div class="banner-text text-center"> <a class="logo" href="http://shadhinsoft.com">Hello there! <b> </b></a>
+          <div class="banner-text text-center"> <a class="logo" href="http://shadhinsoft.com">IMRAN NAZIR EMON<b> </b></a>
             
 			<div class="type-wrap">
             <div id="typed-strings">
-                <p>Our Website is now <em>under</em>  <strong>construction</strong></p> 
+                <p>Hello there! <em>under</em>  <strong> Welcome</strong></p> 
                 <span>Stay Tuned For Something <strong>Amazing</strong></span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
@@ -47,20 +47,7 @@
 				<div class="col-md-10 col-md-offset-1">
 		
 		<!--subscribe section -->
-		<div id="subscribes" class="subscribe"> 
-			  <!-- subscribe form -->
-			  <div class="subscribe-form"> 
-				<h2>Subscribe to our list</h2>	   
-				<form method="post" action="php/subscribe.php" name="subscribeform" id="subscribeform">
-				  <input type="text" name="email" placeholder="Enter email address" id="subemail" />
-				  <input type="submit" name="send" value="Submit" id="subsubmit" class="btn2" />
-				</form>
-				
-				<!-- subscribe message -->
-				<div id="mesaj"></div>
-				<!-- subscribe message -->  
-						</div> 
-					</div>
+		
 				</div>
 			</div> 
 		<!--subscribe section --> 
@@ -74,9 +61,11 @@
       <div class="col-md-10 col-md-offset-1">
         <ul class="footer-share">
           <li><a href="https://www.facebook.com/emon.dmhs"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+         <!-- 
+         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
           <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
           <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+        -->
         </ul> 
         <p> Copyright © 2019 <a href="https://shadhinsoft.com" target="_blank">Shadhin Soft</a></p>
       </div>
