--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             
 			<div class="type-wrap">
             <div id="typed-strings">
-                <p>Hello there! <em>under</em>  <strong> Welcome</strong></p> 
+                <p>Hello there! <em>You're</em>  <strong> Welcome</strong></p> 
                 <span>Stay Tuned For Something <strong>Amazing</strong></span>
             </div>
             <span id="typed" style="white-space:pre;"></span>
